se agregan validaciones para crear,actualizar y eliminar