@@ -1,14 +1,16 @@
 package co.uco.doo.store.api.infrastructure.entrypoints.controllers;
 
 import co.uco.doo.store.api.domain.exceptions.ProductExceptions;
+import co.uco.doo.store.api.domain.models.Product;
 import co.uco.doo.store.api.domain.ports.inputs.ProductService;
+import co.uco.doo.store.api.infrastructure.entrypoints.dtos.HeaderResponse;
+import co.uco.doo.store.api.infrastructure.entrypoints.dtos.ObjectResponse;
 import co.uco.doo.store.api.infrastructure.entrypoints.dtos.ProductDto;
 import lombok.AllArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -20,36 +22,41 @@ public class ProductController {
     private final ProductService productService;
 
     @GetMapping
-    public ResponseEntity<List<ProductDto>> getAll()
+    public ResponseEntity<ObjectResponse> getAll()
     {
-        return new ResponseEntity<>(productService.getAll()
-                .stream()
-                .map(ProductDto::from)
-                .collect(Collectors.toList()), HttpStatus.OK);
+        return  ResponseEntity.ok().body(
+                new ObjectResponse<>(new HeaderResponse(HttpStatus.OK.value(), HttpStatus.OK.getReasonPhrase()),
+                        productService.getAll()
+                                .stream()
+                                .map(ProductDto::from)
+                                .toList()));
     }
 
     @GetMapping("/{id}")
-    public ResponseEntity<ProductDto> getById(@PathVariable Long id){
-        return new ResponseEntity<>(ProductDto.from(productService.getProductById(id)),HttpStatus.OK);
+    public ResponseEntity<ObjectResponse> getById(@PathVariable Long id){
+        return  ResponseEntity.ok().body(
+                new ObjectResponse<>(new HeaderResponse(HttpStatus.OK.value(), HttpStatus.OK.getReasonPhrase()),
+                ProductDto.from(productService.getProductById(id))));
     }
 
     @PostMapping
-    public ResponseEntity<ProductDto> create(@RequestBody ProductDto product)
-    {
+    public ResponseEntity<ObjectResponse> create(@RequestBody ProductDto product) throws ProductExceptions {
         Long id= productService.create(product.ToProduct());
         return getById(id);
     }
     @PutMapping
-    public ResponseEntity<ProductDto> update(@RequestBody ProductDto product) throws ProductExceptions {
+    public ResponseEntity<ObjectResponse> update(@RequestBody ProductDto product) throws ProductExceptions {
         Long id = productService.update(product.ToProduct());
         return getById(id);
     }
 
     @DeleteMapping("/{id}")
-    public ResponseEntity<String> delete(@PathVariable Long id)
-    {
-        productService.delete(id);
-        return new ResponseEntity<>("delete product"+ id.toString(),HttpStatus.ACCEPTED);
+    public ResponseEntity<ObjectResponse> delete(@PathVariable Long id) throws ProductExceptions {
+        productService.delete(Product.builder().id(id).build());
+        return ResponseEntity.ok().body(
+                new ObjectResponse<>(
+                        new HeaderResponse(HttpStatus.OK.value(), HttpStatus.OK.getReasonPhrase()),
+                        "delete product "+ id.toString()));
     }
 
 
